# job_hive

./: README.md  pyproject.toml  test_pipeline_example.py
.github/workflows/: python-package.yml
job_hive/: __init__.py  base.py  job.py  logger.py  pipeline.py  work.py
job_hive/queue/: redis_queue.py
task_hive/: __init__.py  redis_queue.py
task_hive/queue/: __init__.py
tests/: __init__.py  test.py  test_kafka.py  test_pipeline.py  test_redis.py
